--- a/web/app/components/calendar/horizontal_event_component.html.erb
+++ b/web/app/components/calendar/horizontal_event_component.html.erb
@@ -8,7 +8,7 @@
 												action:                  'click->calendar--horizontal-event#openEvent',
 												'event-id':              @event.id
 											},
-											class: 'font-semibold md:hover:underline mb-1 inline-block leading-snug text-gray-800' do %>
+											class: 'c-h3' do %>
 				<%= @event.name %>
 			<% end %>
 			<div class="text-sm md:text-xs md:mt-2 text-gray-500">
@@ -27,13 +27,13 @@
 													class: helpers.class_names('mr-2 cursor-pointer duration-100 ease-linear flex font-medium group hover:px-3 hover:text-gray-600 items-center justify-center rounded-full select-none tap-highlight-none text-sm transform transition-transform',
 																										 { 'bg-brand-100 px-2 py-1 -mt-1': @user&.like?(@event) }) do %>
 						<svg class="<%= helpers.class_names 'group h-5 w-5 stroke-current',
-																								{ 'text-gray-500':  !@user&.like?(@event),
-																									'text-brand-600': @user&.like?(@event) } %>" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-							<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14 10h4.764a2 2 0 011.789 2.894l-3.5 7A2 2 0 0115.263 21h-4.017c-.163 0-.326-.02-.485-.06L7 20m7-10V5a2 2 0 00-2-2h-.095c-.5 0-.905.405-.905.905 0 .714-.211 1.412-.608 2.006L7 11v9m7-10h-2M7 20H5a2 2 0 01-2-2v-6a2 2 0 012-2h2.5"/>
+																								{ 'text-gray-500':               !@user&.like?(@event),
+																									'text-brand-600 fill-current': @user&.like?(@event) } %>" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 5a2 2 0 012-2h10a2 2 0 012 2v16l-7-3.5L5 21V5z"/>
 						</svg>
 						<span class="<%= helpers.class_names('ml-1', { 'text-gray-500':  !@user&.like?(@event),
 																													 'text-brand-600': @user&.like?(@event) }) %>">
-							<%= @user&.like?(@event) ? 'Curti' : 'Curtir' %>
+							<%= @user&.like?(@event) ? 'Salvo' : 'Salvar' %>
 						</span>
 					<% end %>
 				<% end %>
