--- a/web/app/components/hero/horizontal_event_component.html.erb
+++ b/web/app/components/hero/horizontal_event_component.html.erb
@@ -23,24 +23,28 @@
 			<div class="font-light leading-relaxed mt-2 text-gray-700 text-xs">
 				<%= helpers.limit_description_size @event.description %>
 			</div>
-			<div class="flex mt-1 mt-2 space-x-2">
+			<div class="flex mt-3 space-x-4">
 				<%= content_tag :div, data: { action: 'click->hero--horizontal-event#like', 'event-id': @event.id }, class: 'cursor-pointer duration-100 ease-linear flex font-medium group hover:px-3 hover:text-gray-600 items-center justify-center rounded-full select-none tap-highlight-none text-gray-600 text-sm' do %>
-					<svg class="<%= helpers.class_names 'group h-5 w-5 stroke-current',
+					<svg class="<%= helpers.class_names 'h-5 w-5 stroke-current',
 																							{ 'text-gray-500 group-hover:text-brand-600': !@user&.like?(@event),
 																								'text-brand-600':                           @user&.like?(@event) } %>" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 						<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14 10h4.764a2 2 0 011.789 2.894l-3.5 7A2 2 0 0115.263 21h-4.017c-.163 0-.326-.02-.485-.06L7 20m7-10V5a2 2 0 00-2-2h-.095c-.5 0-.905.405-.905.905 0 .714-.211 1.412-.608 2.006L7 11v9m7-10h-2M7 20H5a2 2 0 01-2-2v-6a2 2 0 012-2h2.5"/>
 					</svg>
 					<span class="<%= helpers.class_names('ml-1', { 'text-gray-500 group-hover:text-brand-600': !@user&.like?(@event),
 																												 'text-brand-600':                           @user&.like?(@event) }) %>">
-						Curtir
+						Curti
 					</span>
 				<% end %>
-				<%= content_tag :div, data: { action: 'click->hero--horizontal-event#dislike', 'event-id': @event.id }, class: 'cursor-pointer duration-100 ease-linear flex font-medium group hover:px-3 hover:text-gray-600 items-center justify-center rounded-full select-none tap-highlight-none text-sm' do %>
+				<%= content_tag :div, data: { action: 'click->hero--horizontal-event#dislike', 'event-id': @event.id }, class: 'cursor-pointer duration-100 ease-linear flex group font-medium group hover:px-3 hover:text-gray-600 items-center justify-center rounded-full select-none tap-highlight-none text-sm' do %>
 					<svg class="<%= helpers.class_names 'h-5 w-5 stroke-current',
-																							{ 'text-gray-500 hover:text-gray-600': !@user&.dislike?(@event),
-																								'text-red-500':                      @user&.dislike?(@event) } %>" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+																							{ 'text-gray-500 group-hover:text-brand-600': !@user&.dislike?(@event),
+																								'text-brand-600':                           @user&.dislike?(@event) } %>" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 						<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 14H5.236a2 2 0 01-1.789-2.894l3.5-7A2 2 0 018.736 3h4.018a2 2 0 01.485.06l3.76.94m-7 10v5a2 2 0 002 2h.096c.5 0 .905-.405.905-.904 0-.715.211-1.413.608-2.008L17 13V4m-7 10h2m5-10h2a2 2 0 012 2v6a2 2 0 01-2 2h-2.5"/>
 					</svg>
+					<span class="<%= helpers.class_names('ml-1', { 'text-gray-500 group-hover:text-brand-600': !@user&.like?(@event),
+																												 'text-brand-600':                           @user&.like?(@event) }) %>">
+						Não Curti
+					</span>
 				<% end %>
 			</div>
 		</div>
