--- a/web/app/components/main_sidebar/horizontal_event_component.html.erb
+++ b/web/app/components/main_sidebar/horizontal_event_component.html.erb
@@ -98,18 +98,18 @@
 													class: helpers.class_names('mr-2 cursor-pointer duration-100 ease-linear flex font-medium group hover:px-3 hover:text-gray-600 items-center justify-center rounded-full select-none tap-highlight-none text-sm transform transition-transform',
 																										 { 'bg-brand-100 px-2 py-1 -mt-1': @user&.like?(@event) }) do %>
 						<svg class="<%= helpers.class_names 'group h-5 w-5 stroke-current',
-																								{ 'text-gray-500':  !@user&.like?(@event),
-																									'text-brand-600': @user&.like?(@event) } %>" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-							<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14 10h4.764a2 2 0 011.789 2.894l-3.5 7A2 2 0 0115.263 21h-4.017c-.163 0-.326-.02-.485-.06L7 20m7-10V5a2 2 0 00-2-2h-.095c-.5 0-.905.405-.905.905 0 .714-.211 1.412-.608 2.006L7 11v9m7-10h-2M7 20H5a2 2 0 01-2-2v-6a2 2 0 012-2h2.5"/>
+																								{ 'text-gray-500':               !@user&.like?(@event),
+																									'text-brand-600 fill-current': @user&.like?(@event) } %>" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 5a2 2 0 012-2h10a2 2 0 012 2v16l-7-3.5L5 21V5z"/>
 						</svg>
 						<span class="<%= helpers.class_names('ml-1', { 'text-gray-500':  !@user&.like?(@event),
 																													 'text-brand-600': @user&.like?(@event) }) %>">
-							<%= @user&.like?(@event) ? 'Curti' : 'Curtir' %>
+							<%= @user&.like?(@event) ? 'Salvo' : 'Salvar' %>
 						</span>
 					<% end %>
 				<% end %>
-				<% unless @user&.like?(@event) %>
-					<%= content_tag :div,
+				<%# unless @user&.like?(@event) %>
+				<%#= content_tag :div,
 													id:    dom_id(@event, :dislike),
 													data:  {
 														action:     'click->main-sidebar--horizontal-event#dislike',
@@ -117,14 +117,14 @@
 														component:  'horizontal-event'
 													},
 													class: 'cursor-pointer duration-100 ease-linear flex font-medium group hover:px-3 hover:text-gray-600 items-center justify-center rounded-full select-none tap-highlight-none text-sm transform transition-transform' do %>
-						<svg class="<%= helpers.class_names 'h-5 w-5 stroke-current',
+				<!--						<svg class="<%#= helpers.class_names 'h-5 w-5 stroke-current',-->
 																								{ 'text-gray-500 hover:text-gray-600': !@user&.dislike?(@event),
 																									'text-red-500':                      @user&.dislike?(@event) } %>" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-							<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 14H5.236a2 2 0 01-1.789-2.894l3.5-7A2 2 0 018.736 3h4.018a2 2 0 01.485.06l3.76.94m-7 10v5a2 2 0 002 2h.096c.5 0 .905-.405.905-.904 0-.715.211-1.413.608-2.008L17 13V4m-7 10h2m5-10h2a2 2 0 012 2v6a2 2 0 01-2 2h-2.5"/>
-						</svg>
-					<% end %>
-				<% end %>
-				<div class="<%= helpers.class_names('md:group-hover:opacity-100 md:opacity-0 cursor-pointer duration-100 ease-linear flex font-medium group hover:px-3 text-brand-600 items-center justify-center rounded-full select-none tap-highlight-none text-sm transform transition-transform bg-brand-100 hover:bg-brand-200 -mt-1 px-2 py-1 -mt-1',
+						<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 14H5.236a2 2 0 01-1.789-2.894l3.5-7A2 2 0 018.736 3h4.018a2 2 0 01.485.06l3.76.94m-7 10v5a2 2 0 002 2h.096c.5 0 .905-.405.905-.904 0-.715.211-1.413.608-2.008L17 13V4m-7 10h2m5-10h2a2 2 0 012 2v6a2 2 0 01-2 2h-2.5"/>
+										</svg>-->
+				<%# end %>
+				<%# end %>
+				<div class="<%= helpers.class_names('md:group-hover:opacity-100 md:opacity-0 cursor-pointer duration-100 ease-linear flex font-medium group hover:px-3 text-brand-600 items-center justify-center rounded-full select-none tap-highlight-none text-sm transform transition-transform hover:bg-brand-100 -mt-1 px-2 py-1 -mt-1',
 																						{ 'ml-5': !@user&.like?(@event) }) %>"
 						 data-controller="share-button"
 						 data-share-button-text="<%= strip_tags(helpers.limit_description_size(@event.description)) %>"
