Add movies list to navigate in movies#show

--- a/web/app/views/layouts/application.html.erb
+++ b/web/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 				content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
 
 	<%= render partial: 'layouts/meta-tags', cached: -> { [controller_name, action_name] } %>
-	<%= render partial: 'layouts/google_analytics' %>
+	<%= render partial: 'layouts/google_analytics', cached: true %>
 
 	<%= canonical_url %>
 	<%= amp_url %>
@@ -39,8 +39,6 @@
 	<% if content_for? :preload_image %>
 		<link rel="preload" as="image" href="<%= content_for :preload_image %>">
 	<% end %>
-
-	<%= Gon::Base.render_data %>
 
 	<%= javascript_pack_tag 'application', 'data-turbo-track': 'reload', defer: true %>
 
