Refactor in movies component and movies#show queries

--- a/web/app/components/movies_component.html.erb
+++ b/web/app/components/movies_component.html.erb
@@ -1,4 +1,4 @@
-<div id="movies" data-turbo-permanent class="max-w-screen-lg mx-auto py-3" data-controller="persist-horizontal-scroll slider" data-model="movie" data-slider-distance-value="400" data-persist-horizontal-scroll-value="0">
+<div id="<%= @id %>" data-turbo-permanent class="max-w-screen-lg mx-auto py-3" data-controller="persist-horizontal-scroll slider" data-model="movie" data-slider-distance-value="400" data-persist-horizontal-scroll-value="0">
 	<% if @title %>
 		<h2 class="px-5 c-h2">
 			<%= @title %>
