--- a/web/app/views/feeds/index.html.erb
+++ b/web/app/views/feeds/index.html.erb
@@ -54,7 +54,7 @@
 				<%= render Hero::SwipableComponent.new(user: current_user) %>
 			<% end %>
 
-			<%= render MoviesComponent.new(movies: @movies, user: current_user) if @movies.present? && controller_name == 'feeds' && action_name == 'index' && params[:category].blank? %>
+			<%= render MoviesComponent.new(movies: @movies, user: current_user, id:'movies-index') if @movies.present? && controller_name == 'feeds' && action_name == 'index' && params[:category].blank? %>
 		</div>
 
 		<div>
