Refactor large_event_component to open in sidebar at feed

--- a/web/app/components/left_sidebar/calendar_component.html.erb
+++ b/web/app/components/left_sidebar/calendar_component.html.erb
@@ -1,4 +1,4 @@
-<%= content_tag :div, id: 'calendar', data: { controller: 'left-sidebar--calendar' }, class: '' do %>
+<%= content_tag :div, id: 'calendar', data: { controller: 'left-sidebar--calendar' }, class: 'transition-opacity' do %>
 	<div data-calendar-target="calendar" class="calendar select-none tap-highlight-none mt-10">
 		<span class="c-h2 pb-2 pt-10">Minha agenda</span>
 		<div class="capitalize pt-2 flex font-medium items-center justify-between pb-5 rounded-t-lg text-gray-500">
