--- a/web/app/views/feeds/index.html.erb
+++ b/web/app/views/feeds/index.html.erb
@@ -1,26 +1,5 @@
 <%= render Modal::SignInComponent.new(text: nil) %>
 
-
-<div data-controller="loader"
-		 data-loader-on-loading="horizontal-event#open-event:before"
-		 data-loader-on-loaded="horizontal-event#open-event:success"
-		 class="sticky top-20 z-10 z-50 px-5 mx-auto">
-	<div id="open-event"
-			 data-loader-target="loaded">
-		<%= render MainSidebar::LargeEventComponent.new(user: current_user, event: nil) %>
-	</div>
-	<div
-		class="flex hidden overscroll-contain fixed top-0 left-0 justify-center items-center w-screen h-screen text-3xl text-gray-800 rounded-xl shadow-lg font-display"
-		data-loader-target="loading"
-		style="background: #abacbfeb">
-		Carregando
-		<svg data-loader-target="onIcon" class="ml-2 w-5 h-5 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-			<path fill="none" d="M0 0h24v24H0V0z"/>
-			<path d="M17.65 6.35c-1.63-1.63-3.94-2.57-6.48-2.31-3.67.37-6.69 3.35-7.1 7.02C3.52 15.91 7.27 20 12 20c3.19 0 5.93-1.87 7.21-4.56.32-.67-.16-1.44-.9-1.44-.37 0-.72.2-.88.53-1.13 2.43-3.84 3.97-6.8 3.31-2.22-.49-4.01-2.3-4.48-4.52C5.31 9.44 8.26 6 12 6c1.66 0 3.14.69 4.22 1.78l-1.51 1.51c-.63.63-.19 1.71.7 1.71H19c.55 0 1-.45 1-1V6.41c0-.89-1.08-1.34-1.71-.71l-.64.65z"/>
-		</svg>
-	</div>
-</div>
-
 <div id="main-content" class="gap-16 mx-auto max-w-screen-lg md:grid md:grid-cols-8">
 	<section id="main-sidebar" class="pt-12 space-y-16 col-span-8 md:col-span-5">
 		<div class="space-y-16 mx-auto is-animated sm:container">
@@ -54,7 +33,7 @@
 				<%= render Hero::SwipableComponent.new(user: current_user) %>
 			<% end %>
 
-			<%= render MoviesComponent.new(movies: @movies, user: current_user, id:'movies-index') if @movies.present? && controller_name == 'feeds' && action_name == 'index' && params[:category].blank? %>
+			<%= render MoviesComponent.new(movies: @movies, user: current_user, id: 'movies-index') if @movies.present? && controller_name == 'feeds' && action_name == 'index' && params[:category].blank? %>
 		</div>
 
 		<div>
@@ -93,6 +72,26 @@
 	<% unless mobile_device? %>
 		<section class="hidden md:inline-block md:col-span-3 md:bg-white"
 						 id="left-sidebar">
+			<div data-controller="loader"
+					 data-loader-on-loading="horizontal-event#open-event:before"
+					 data-loader-on-loaded="horizontal-event#open-event:success"
+					 class="sticky top-28 z-10">
+				<div id="open-event"
+						 data-loader-target="loaded"
+						 class="bg-white relative z-20 w-96">
+					<%= render MainSidebar::LargeEventComponent.new(user: current_user, event: nil) %>
+				</div>
+				<div
+					class="hidden border flex font-display h-screen-8/10 items-center justify-center left-0 mt-10 overscroll-contain rounded-xl shadow-lg text-2xl text-gray-800 w-96"
+					data-loader-target="loading"
+					style="">
+					Carregando
+					<svg data-loader-target="onIcon" class="ml-2 w-5 h-5 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+						<path fill="none" d="M0 0h24v24H0V0z"/>
+						<path d="M17.65 6.35c-1.63-1.63-3.94-2.57-6.48-2.31-3.67.37-6.69 3.35-7.1 7.02C3.52 15.91 7.27 20 12 20c3.19 0 5.93-1.87 7.21-4.56.32-.67-.16-1.44-.9-1.44-.37 0-.72.2-.88.53-1.13 2.43-3.84 3.97-6.8 3.31-2.22-.49-4.01-2.3-4.48-4.52C5.31 9.44 8.26 6 12 6c1.66 0 3.14.69 4.22 1.78l-1.51 1.51c-.63.63-.19 1.71.7 1.71H19c.55 0 1-.45 1-1V6.41c0-.89-1.08-1.34-1.71-.71l-.64.65z"/>
+					</svg>
+				</div>
+			</div>
 			<%= render LeftSidebar::CalendarComponent.new(events: @liked_events, start_date: Date.today, user: current_user, filter: false, indicators: @indicators) %>
 		</section>
 	<% end %>
